# rust-weather

./: Cargo.toml  README.md
src/: config.rs  main.rs  spark.rs  weather.rs
src/i18/: en.rs  mod.rs  pl.rs
